--- a/MemoryGame/index.html
+++ b/MemoryGame/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    hello
+    
+    <script src="app.js"></script>
 </body>
