--- a/MyPage/index.html
+++ b/MyPage/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    
+    <nav class="navbar">
+        <h1>MyPage</h1>
+    </nav>
 </body>
 </html>
