--- a/MyPage/list3.html
+++ b/MyPage/list3.html
@@ -9,16 +9,10 @@
     <link rel="stylesheet" type ="text/css" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <h1 class="logo">MyPage</h1>
-        <ul class="points">
-            <li><a href="list1.html" class="btn">List 1</a></li>
-            <li><a href="list2.html" class="btn">List 2</a></li>
-            <li><a href="list3.html" class="btn">List 3</a></li>
-            <li><a href="list4.html" class="btn">List 4</a></li>
-        </ul>
-    </nav>
-
+    <h1>List3</h1>
+    <ul>
+        <li><a href="index.html"  class="btn">Back</a></li>
+    </ul>
     <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam praesentium nulla obcaecati qui facere excepturi eius, eligendi explicabo optio et molestias nobis dolorum minus saepe voluptates earum ullam architecto incidunt!</div>
 </body>
 </html>
