--- a/Profil2/index.html
+++ b/Profil2/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Portfolio Website with dark Mode</title>
     <link rel="stylesheet" href="styles.css">
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     
@@ -14,11 +14,11 @@
             <a href="#" class="logo">Eloise.</a>
 
             <nav class="navbar">
-                <a href="Home"></a>
-                <a href="About"></a>
-                <a href="Skills"></a>
-                <a href="Portfolio"></a>
-                <a href="Contact"></a>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Skills</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Contact</a>
             </nav>
 
             <div class="toggle-icon">
