--- a/Profil2/index.html
+++ b/Profil2/index.html
@@ -14,7 +14,7 @@
             <a href="#" class="logo">Eloise.</a>
 
             <nav class="navbar">
-                <a href="#">Home</a>
+                <a href="#" class="active">Home</a>
                 <a href="#">About</a>
                 <a href="#">Skills</a>
                 <a href="#">Portfolio</a>
