Portfolio Website with dark Mode_3

--- a/Profil2/index.html
+++ b/Profil2/index.html
@@ -25,6 +25,25 @@
                 <i class='bx bx-moon'></i>
             </div>
         </header>
+
+        <section class="home">
+            <div class="home-content">
+                <h3>Hello, It's Me</h3>
+                <h1>Eloise Alice Violet</h1>
+                <h3>And I'm a <span>Web Devoloper</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita magnam voluptate dolorem tempora, totam natus quisquam eius placeat omnis, suscipit a laudantium nam veritatis, unde inventore doloremque neque repellendus tempore!</p>
+
+                <div class="social-media">
+                    <a href="#" class='bx bxl-facebook'></a>
+                    <a href="#" class='bx bxl-twitter'></a>
+                    <a href="#" class='bx bxl-instagram-alt'></a>
+                    <a href="#" class='bx bxl-linkedin'></a>
+                </div>
+
+                <a href="" class="btn">Download CV</a>
+            </div>
+
+        </section>
     </div>
 
     <script src="script.js"></script>
