--- a/Profil2/index.html
+++ b/Profil2/index.html
@@ -29,7 +29,7 @@
         <section class="home">
             <div class="home-content">
                 <h3>Hello, It's Me</h3>
-                <h1>Eloise Alice Violet</h1>
+                <h1>Aleš Urankar</h1>
                 <h3>And I'm a <span>Web Devoloper</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita magnam voluptate dolorem tempora, totam natus quisquam eius placeat omnis, suscipit a laudantium nam veritatis, unde inventore doloremque neque repellendus tempore!</p>
 
@@ -43,6 +43,9 @@
                 <a href="" class="btn">Download CV</a>
             </div>
 
+            <div class="home-img">
+                <img src="imgLight.png">
+            </div>
         </section>
     </div>
 
