--- a/Profil2/index.html
+++ b/Profil2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="container" id="container">
+    <div class="container active" id="container">
         <header class="header">
             <a href="#" class="logo">Eloise.</a>
 
