--- a/MyPage/index.html
+++ b/MyPage/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MojProfil2</title>
+    <title>MyPage</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" type ="text/css" href="styles.css">
 </head>
@@ -12,10 +12,9 @@
     <nav class="navbar">
         <h1 class="logo">MyPage</h1>
         <ul class="points">
-            <li><a href="list1.html" class="btn">List 1</a></li>
-            <li><a href="list2.html" class="btn">List 2</a></li>
-            <li><a href="list3.html" class="btn">List 3</a></li>
-            <li><a href="list4.html" class="btn">List 4</a></li>
+            <li><a href="Profil1/index.html" class="btn">Profil1</a></li>
+            <li><a href="Profil2/index.html" class="btn">Profil2</a></li>
+            <li><a href="Profil3/index.html" class="btn">Profil3</a></li>
         </ul>
     </nav>
 
