--- a/MyPage/Profil1/index.html
+++ b/MyPage/Profil1/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="../index.html">Back</a></li>
         </ul>
     </nav>
 
