--- a/MyPage/Profil2/index.html
+++ b/MyPage/Profil2/index.html
@@ -19,6 +19,7 @@
                 <a href="#">Skills</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
+                <a href="../index.html">Back</a>
             </nav>
 
             <div class="toggle-icon">
