Personal Portfolio Website

--- a/MyPage/Profil1/index.html
+++ b/MyPage/Profil1/index.html
@@ -55,7 +55,7 @@
         <div class="home-img">
             <div class="img-box">
                 <div class="img-item">
-                    <img src="home.png" alt="profile-picture">
+                    <img src="../imgLight.png" alt="profile-picture">
                 </div>
             </div>
         </div>
