--- a/MyPage/Profil2/index.html
+++ b/MyPage/Profil2/index.html
@@ -11,7 +11,7 @@
     
     <div class="container active" id="container">
         <header class="header">
-            <a href="#" class="logo">Eloise.</a>
+            <a href="#" class="logo">Ales.</a>
 
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="home-img">
-                <img src="imgLight.png">
+                <img src="../imgLight.png">
             </div>
         </section>
     </div>
