--- a/MyPage/index.html
+++ b/MyPage/index.html
@@ -15,6 +15,7 @@
             <li><a href="Profil1/index.html" class="btn">Profil1</a></li>
             <li><a href="Profil2/index.html" class="btn">Profil2</a></li>
             <li><a href="Profil3/index.html" class="btn">Profil3</a></li>
+            <li><a href="Profil4/index.html" class="btn">Profil4</a></li>
         </ul>
     </nav>
 
