--- a/MyPage/Profil1/index.html
+++ b/MyPage/Profil1/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="../Resume/index.html">Resume</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="../index.html">Back</a></li>
