--- a/MyPage/Profil2/index.html
+++ b/MyPage/Profil2/index.html
@@ -17,7 +17,7 @@
                 <a href="#" class="active">Home</a>
                 <a href="#">About</a>
                 <a href="#">Skills</a>
-                <a href="#">Portfolio</a>
+                <a href="../Resume/index.html">Resume</a>
                 <a href="#">Contact</a>
                 <a href="../index.html">Back</a>
             </nav>
