--- a/MyPage/Profil3/index.html
+++ b/MyPage/Profil3/index.html
@@ -13,8 +13,7 @@
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Blog</a>
+            <a href="../Resume/index.html">Resume</a>
             <a href="#">Contact</a>
             <a href="../index.html">Back</a>
         </nav>
