--- a/MyPage/Resume/index.html
+++ b/MyPage/Resume/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+    <a href="../index.html" class="btn">Back</a>
     <div class="container">
         <div class="header">
             <div class="img-area">
@@ -86,7 +87,5 @@
             </div>
         </div>
     </div>
-    
-    <a href="../index.html">Back</a>
 </body>
 </html>
