--- a/MyPage/Profil1/index.html
+++ b/MyPage/Profil1/index.html
@@ -11,11 +11,11 @@
 <body>
     
     <nav class="navbar">
-        <a href="#" class="logo">Portfolio.</a>
+        <a href="#" class="logo">Portfolio.(Navigation Bar in Beta)</a>
         <ul>
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="../Resume/index.html">Resume</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="../index.html">Back</a></li>
@@ -40,14 +40,13 @@
                 <span style="--i:2;" data-text="C++ Devoloper">C++ Devoloper</span>
                 <span style="--i:1;" data-text="App Builder">App Builder</span>
             </h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ipsam unde atque. Odit illum nam tempora esse ut aliquid eligendi molestiae. Facere, necessitatibus! Harum asperiores ipsum officiis ipsam quod autem!</p>
+            <p>I'm passionate about software development, with a strong focus on C++</p>
             <div class="btn-sci">
-                <a href="#" class="btn">Download CV</a>
+                
+                <a href="../Resume/index.html" class="btn">Resume</a>
                 <div class="sci">
-                    <a href="#"><i class='bx bxl-github'></i></a>
-                    <a href="#"><i class='bx bxl-linkedin'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-youtube'></i></a>
+                    <a href="https://github.com/alesurankar"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.youtube.com/@aleurankar"><i class='bx bxl-youtube'></i></a>
                 </div>
             </div>
         </div>
@@ -55,7 +54,7 @@
         <div class="home-img">
             <div class="img-box">
                 <div class="img-item">
-                    <img src="../imgLight.png" alt="profile-picture">
+                    <img src="../myFace.jpg" alt="profile-picture">
                 </div>
             </div>
         </div>
