--- a/MyPage/Resume/index.html
+++ b/MyPage/Resume/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header">
             <div class="img-area">
-                <img src="../imgLight.png" alt="profile_photo">
+                <img src="../myFace.jpg" alt="profile_photo">
             </div>
             <h1>Aleš Urankar</h1>
             <h3>Softwere devoloper</h3>
