--- a/MyPage/Profil2/index.html
+++ b/MyPage/Profil2/index.html
@@ -11,13 +11,13 @@
     
     <div class="container active" id="container">
         <header class="header">
-            <a href="#" class="logo">Ales.</a>
+            <a href="#" class="logo">Ales. (Navigation Bar in Beta)</a>
 
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
                 <a href="#">About</a>
                 <a href="#">Skills</a>
-                <a href="../Resume/index.html">Resume</a>
+                <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
                 <a href="../index.html">Back</a>
             </nav>
@@ -32,16 +32,14 @@
                 <h3>Hello, It's Me</h3>
                 <h1>Aleš Urankar</h1>
                 <h3>And I'm a <span>Web Devoloper</span></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita magnam voluptate dolorem tempora, totam natus quisquam eius placeat omnis, suscipit a laudantium nam veritatis, unde inventore doloremque neque repellendus tempore!</p>
+                <p>I'm passionate about building web pages and continuously expanding my knowledge.</p>
 
                 <div class="social-media">
-                    <a href="#" class='bx bxl-facebook'></a>
-                    <a href="#" class='bx bxl-twitter'></a>
-                    <a href="#" class='bx bxl-instagram-alt'></a>
-                    <a href="#" class='bx bxl-linkedin'></a>
+                    <a href="https://www.facebook.com/ales.urankar/" class='bx bxl-facebook'></a>
+                    <a href="https://github.com/alesurankar"><i class='bx bxl-github'></i></a>
                 </div>
-
-                <a href="" class="btn">Download CV</a>
+                
+                <a href="../Resume/index.html" class="btn">Resume</a>
             </div>
 
             <div class="home-img">
