--- a/MyPage/Profil3/index.html
+++ b/MyPage/Profil3/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <header>
-        <h2 class="logo">Aleš.</h2>
+        <h2 class="logo">Aleš. (Alpha state)</h2>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="../Resume/index.html">Resume</a>
+            <a href="#">Portfolio</a>
             <a href="#">Contact</a>
             <a href="../index.html">Back</a>
         </nav>
