--- a/MyPage/index.html
+++ b/MyPage/index.html
@@ -18,8 +18,6 @@
         </ul>
     </nav>
 
-    <div class="content">I'm a passionate and curious developer who enjoys building software and web pages that solve real problems. With a strong foundation in C++, I appreciate the power and efficiency of low-level programming, while also exploring modern web technologies to create dynamic, responsive websites. I believe in continuous learning and make it a priority to expand my skills every day—whether through coding challenges, new frameworks, or real-world projects. I value clean, efficient code and love working on both the creative and technical sides of development. I'm always excited to take on new challenges and grow as a developer.
-
-</div>
+    <div class="content">I'm a passionate and curious developer who enjoys building software and web pages. With a strong foundation in C++, I appreciate the power and efficiency of low-level programming, while also exploring modern web technologies to create dynamic, responsive websites. I believe in continuous learning and make it a priority to expand my skills every day—whether through coding challenges, new frameworks, or real-world projects. I value clean, efficient code and love working on both the creative and technical sides of development. I'm always excited to take on new challenges and grow as a developer.</div>
 </body>
 </html>
